Linked the JS file to the index.html

--- a/domAndEvents1.html
+++ b/domAndEvents1.html
@@ -10,31 +10,8 @@
     <h1>Temperature Converter</h1>
     <input type="text" id="Fahrenheit" onkeyup="convert('Fahrenheit')">Fahrenheit
     <br>
-
     <input type="text" id="Celsius" onkeyup="convert('Celsius')">Celcius
-  
-   
-    <script>
-    var _id = function _id(id) {
-        return document.getElementById(id);
-    }
-
-    var convert = function(temp) {
-        var f = parseFloat(_id("Fahrenheit")['value']);
-        var c = parseFloat(_id("Celsius")['value']);
-
-        if (temp == "Fahrenheit") {
-            var cel = (f - 32) * 5 / 9;
-            console.log(f, ' is equl to ', cel, 'Celsius');
-            _id("Celsius")['value'] = cel || "";
-        } else {
-            var fah = (c * 1.8) + 32;
-            console.log(c, ' is equl to ', fah, 'Fahrenheit');
-            _id("Fahrenheit")['value'] = fer || "";
-        }
-
-    }
-    </script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
